parser.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Query: peg$parseQuery },
        peg$startRuleFunction  = peg$parseQuery,

        peg$c0 = function(tables, map, options, filters) {
            return {
              type: "find",
              filters: filters,
              map: map,
              options: options,
              tables: tables
            }
          },
        peg$c1 = "+",
        peg$c2 = peg$literalExpectation("+", false),
        peg$c3 = function(tables, object) {
            return {
              type: "insert",
              object: object,
              tables: tables
            }
          },
        peg$c4 = "^",
        peg$c5 = peg$literalExpectation("^", false),
        peg$c6 = function(tables, object, filters) {
            return {
              type: "update",
              filters: filters,
              object: object,
              tables: tables
            }
          },
        peg$c7 = "-",
        peg$c8 = peg$literalExpectation("-", false),
        peg$c9 = "!",
        peg$c10 = peg$literalExpectation("!", false),
        peg$c11 = function(tables, filters) {
            return {
              type: "delete",
              filters: filters,
              tables: tables
            }
          },
        peg$c12 = /^[a-zA-Z_@#]/,
        peg$c13 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "@", "#"], false, false),
        peg$c14 = /^[0-9a-zA-Z_@#$]/,
        peg$c15 = peg$classExpectation([["0", "9"], ["a", "z"], ["A", "Z"], "_", "@", "#", "$"], false, false),
        peg$c16 = function() { return text(); },
        peg$c17 = "{",
        peg$c18 = peg$literalExpectation("{", false),
        peg$c19 = "}",
        peg$c20 = peg$literalExpectation("}", false),
        peg$c21 = function(fields) {
            var map = {};
            fields.forEach(function(field) {
              map[field.input] = field.output;
            });
            return map;
          },
        peg$c22 = ",",
        peg$c23 = peg$literalExpectation(",", false),
        peg$c24 = " ",
        peg$c25 = peg$literalExpectation(" ", false),
        peg$c26 = function(field) { return field; },
        peg$c27 = "[",
        peg$c28 = peg$literalExpectation("[", false),
        peg$c29 = "]",
        peg$c30 = peg$literalExpectation("]", false),
        peg$c31 = function(options) { return options; },
        peg$c32 = function(option) { return option; },
        peg$c33 = "sort",
        peg$c34 = peg$literalExpectation("sort", false),
        peg$c35 = "=",
        peg$c36 = peg$literalExpectation("=", false),
        peg$c37 = function(sorts) {
            return {
              type: "sort",
              value: sorts
            }
          },
        peg$c38 = "",
        peg$c39 = function(order, name) {
            return {
              key: name,
              order: ("-" === order) ? "desc" : "asc"
            }
          },
        peg$c40 = "limit",
        peg$c41 = peg$literalExpectation("limit", false),
        peg$c42 = function(count) {
            return {
              type: "limit",
              value: count
            }
          },
        peg$c43 = "skip",
        peg$c44 = peg$literalExpectation("skip", false),
        peg$c45 = function(count) {
            return {
              type: "skip",
              value: count
            }
          },
        peg$c46 = "?",
        peg$c47 = peg$literalExpectation("?", false),
        peg$c48 = function(filters) {
         	return filters;
          },
        peg$c49 = function(head, tail) {
            if (tail.length) {
              return { operator : "|", operands: [head].concat(tail.map(function(x) { return x[3]; })) };
            } else {
              return head;
            }
          },
        peg$c50 = function(head, tail) {
            if (tail.length) {
              return { operator : "&", operands: [head].concat(tail.map(function(x) { return x[3]; })) };
            } else {
              return head;
            }
          },
        peg$c51 = "(",
        peg$c52 = peg$literalExpectation("(", false),
        peg$c53 = ")",
        peg$c54 = peg$literalExpectation(")", false),
        peg$c55 = function(term) { return term },
        peg$c56 = function(subject, predicate) {
            return {
              key: subject.name,
              index: subject.index,
              comparator: predicate.comparator,
              value: predicate.value
            }
          },
        peg$c57 = function(name, index) {
            return {
              name: name,
              index: index || null
            }
          },
        peg$c58 = "*",
        peg$c59 = peg$literalExpectation("*", false),
        peg$c60 = function(position) {
            return position;
          },
        peg$c61 = function(comparator, value) {
            return {
              comparator: comparator,
              value: value
            }
          },
        peg$c62 = "<=",
        peg$c63 = peg$literalExpectation("<=", false),
        peg$c64 = "<",
        peg$c65 = peg$literalExpectation("<", false),
        peg$c66 = ">=",
        peg$c67 = peg$literalExpectation(">=", false),
        peg$c68 = ">",
        peg$c69 = peg$literalExpectation(">", false),
        peg$c70 = "!=",
        peg$c71 = peg$literalExpectation("!=", false),
        peg$c72 = "?=",
        peg$c73 = peg$literalExpectation("?=", false),
        peg$c74 = function(head, tail) {
            if (tail.length) {
              return { type: "array", value: [head].concat(tail.map(function(x) { return x[2]; })) };
            } else {
              return { type: "array", value: head };
            }
          },
        peg$c75 = function(head, tail) {
            if (tail.length) {
              return { type: "list", value: [head].concat(tail.map(function(x) { return x[2]; })) };
            } else {
              return { type: "list", value: head };
            }
          },
        peg$c76 = function(text) {
           return {
             input: text.value,
             output: text.value
           }
         },
        peg$c77 = /^[gim]/,
        peg$c78 = peg$classExpectation(["g", "i", "m"], false, false),
        peg$c79 = function(regex, flags) {
            return {
              type: "regex",
              value: regex + flags.join("")
            }
          },
        peg$c80 = "true",
        peg$c81 = peg$literalExpectation("true", false),
        peg$c82 = "false",
        peg$c83 = peg$literalExpectation("false", false),
        peg$c84 = function() {
            return {
              type: "literal",
              value: text() !== "false"
            }
          },
        peg$c85 = function(number) {
            return {
              type: "literal",
              value: number
            }
          },
        peg$c86 = function(value) {
            return {
              type: "literal",
              value: value
            }
          },
        peg$c87 = "&",
        peg$c88 = peg$literalExpectation("&", false),
        peg$c89 = "|",
        peg$c90 = peg$literalExpectation("|", false),
        peg$c91 = "{{",
        peg$c92 = peg$literalExpectation("{{", false),
        peg$c93 = "}}",
        peg$c94 = peg$literalExpectation("}}", false),
        peg$c95 = /^[a-zA-Z_@#$]/,
        peg$c96 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "@", "#", "$"], false, false),
        peg$c97 = ".",
        peg$c98 = peg$literalExpectation(".", false),
        peg$c99 = /^[0-9]/,
        peg$c100 = peg$classExpectation([["0", "9"]], false, false),
        peg$c101 = function() { return parseInt(text(), 10); },
        peg$c102 = function() { return parseFloat(text()); },
        peg$c103 = "/",
        peg$c104 = peg$literalExpectation("/", false),
        peg$c105 = "\\/",
        peg$c106 = peg$literalExpectation("\\/", false),
        peg$c107 = /^[^\/]/,
        peg$c108 = peg$classExpectation(["/"], true, false),
        peg$c109 = function() { return text() },
        peg$c110 = /^[^{}[\]&:,'"]/,
        peg$c111 = peg$classExpectation(["{", "}", "[", "]", "&", ":", ",", "'", "\""], true, false),
        peg$c112 = /^[ \t]/,
        peg$c113 = peg$classExpectation([" ", "\t"], false, false),
        peg$c114 = function(value) { return value; },
        peg$c115 = ":",
        peg$c116 = peg$literalExpectation(":", false),
        peg$c117 = peg$otherExpectation("whitespace"),
        peg$c118 = /^[ \t\n\r]/,
        peg$c119 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
        peg$c120 = function() { return false; },
        peg$c121 = "null",
        peg$c122 = peg$literalExpectation("null", false),
        peg$c123 = function() { return null;  },
        peg$c124 = function() { return true;  },
        peg$c125 = function(head, m) { return m; },
        peg$c126 = function(head, tail) {
                var result = {}, i;

                result[head.name] = head.value;

                for (i = 0; i < tail.length; i++) {
                  result[tail[i].name] = tail[i].value;
                }

                return result;
              },
        peg$c127 = function(members) { return members !== null ? members: {}; },
        peg$c128 = function(name, value) {
              return { name: name, value: value };
            },
        peg$c129 = function(head, v) { return v; },
        peg$c130 = function(head, tail) { return [head].concat(tail); },
        peg$c131 = function(values) { return values !== null ? values : []; },
        peg$c132 = peg$otherExpectation("number"),
        peg$c133 = /^[1-9]/,
        peg$c134 = peg$classExpectation([["1", "9"]], false, false),
        peg$c135 = /^[eE]/,
        peg$c136 = peg$classExpectation(["e", "E"], false, false),
        peg$c137 = "0",
        peg$c138 = peg$literalExpectation("0", false),
        peg$c139 = peg$otherExpectation("string"),
        peg$c140 = function(chars) { return chars.join("") },
        peg$c141 = "\"",
        peg$c142 = peg$literalExpectation("\"", false),
        peg$c143 = "\\",
        peg$c144 = peg$literalExpectation("\\", false),
        peg$c145 = "b",
        peg$c146 = peg$literalExpectation("b", false),
        peg$c147 = function() { return "\b"; },
        peg$c148 = "f",
        peg$c149 = peg$literalExpectation("f", false),
        peg$c150 = function() { return "\f"; },
        peg$c151 = "n",
        peg$c152 = peg$literalExpectation("n", false),
        peg$c153 = function() { return "\n"; },
        peg$c154 = "r",
        peg$c155 = peg$literalExpectation("r", false),
        peg$c156 = function() { return "\r"; },
        peg$c157 = "t",
        peg$c158 = peg$literalExpectation("t", false),
        peg$c159 = function() { return "\t"; },
        peg$c160 = "u",
        peg$c161 = peg$literalExpectation("u", false),
        peg$c162 = function(digits) {
                  return String.fromCharCode(parseInt(digits, 16));
                },
        peg$c163 = function(sequence) { return sequence; },
        peg$c164 = /^[^\0-\x1F'\\]/,
        peg$c165 = peg$classExpectation([["\0", "\x1F"], "'", "\\"], true, false),
        peg$c166 = "'",
        peg$c167 = peg$literalExpectation("'", false),
        peg$c168 = /^[^\0-\x1F"\\]/,
        peg$c169 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
        peg$c170 = /^[0-9a-f]/i,
        peg$c171 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseQuery() {
      var s0;

      s0 = peg$parseFindQuery();
      if (s0 === peg$FAILED) {
        s0 = peg$parseInsertQuery();
        if (s0 === peg$FAILED) {
          s0 = peg$parseUpdateQuery();
          if (s0 === peg$FAILED) {
            s0 = peg$parseDeleteQuery();
          }
        }
      }

      return s0;
    }

    function peg$parseFindQuery() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseTables();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMap();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseOptions();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseFilters();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c0(s1, s3, s5, s7);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseInsertQuery() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 43) {
        s1 = peg$c1;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseTables();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseobject();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c3(s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseUpdateQuery() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 94) {
        s1 = peg$c4;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseTables();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseobject();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseFilters();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c6(s3, s5, s7);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseDeleteQuery() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 45) {
        s1 = peg$c7;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseTables();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseFilters();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 33) {
                    s7 = peg$c9;
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c10); }
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c11(s3, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTables() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseTable();
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$parseTable();
        }
      } else {
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTable() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
